2009-03-17 [colin]	2.0.4cvs4

	* src/vcal_meeting_gtk.c
		Fix Location line, thanks to Miras

2009-03-17 [colin]	2.0.4cvs3

	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcal_manager.h
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Add support for the Location field. Patch by
		Pascal Eberhard <pascal.eberhard at gmail.com>,
		fixes bug 1852 'vCalendar Plugin should display 
		Location of events'

2009-03-08 [paul]	2.0.4cvs2

	* configure.ac
	* po/ja.po
		add Japanese translation, submitted by kazken3

2009-03-06 [colin]	2.0.4cvs1

	* libical/libical/sspm.c
		Fix format string

2009-03-06 [paul]	2.0.4

	2.0.4 released

2009-03-06 [paul]	2.0.3cvs4

	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/pt_BR.po
		updated by Flammie Pirinen, Colin Leroy, Pader Rezso,
		and Frederico Goncalves Guimaraes

2009-02-22 [colin]	2.0.3cvs3

	* libical/libical/icalmime.c
	* src/vcal_folder.c
		Coverity fixes

2009-01-25 [paul]	2.0.3cvs2

	* src/vcal_prefs.c
		fix warning "GtkSpinButton: setting an
		adjustment with non-zero page size is deprecated"

2009-01-06 [colin]	2.0.3cvs1

	* libical/libical/icalerror.c
	* libical/libical/icalmime.c
	* libical/libical/sspm.c
		Fix uninitialized warnings

2008-12-19 [paul]	2.0.3

	2.0.3 released

2008-12-19 [paul]	2.0.2cvs7

	* configure.ac
	* po/cs.po
		added by David Vachulka

2008-12-12 [paul]	2.0.2cvs6

	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcalendar.c
		win32: fix unlinking
		Patch by Colin

2008-12-07 [colin]	2.0.2cvs5

	* src/month-view.c
	* src/vcal_meeting_gtk.c
		Fix warnings

2008-12-07 [paul]	2.0.2cvs4

	* configure.ac
		check for compiler before setting CFLAGS
		clean up check for curl

2008-11-28 [colin]	2.0.2cvs3

	* po/fr.po
		Update

2008-11-27 [colin]	2.0.2cvs2

	* src/claws.def
	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcalendar.c
		Don't use prefs_common struct directly
		(will avoid crashes on Windows)

2008-11-14 [colin]	2.0.2cvs1

	* src/plugin.c
	* src/vcalendar.c
		Sync with core
