@@ -221,3 +221,4 @@
 ( cvs diff -u -r 1.2.2.324 -r 1.2.2.325 configure.ac;  diff -u /dev/null po/ja.po;  ) > 2.0.4cvs2.patchset
 ( cvs diff -u -r 1.2.2.108 -r 1.2.2.109 src/vcal_folder.c;  cvs diff -u -r 1.1.2.79 -r 1.1.2.80 src/vcal_manager.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/vcal_manager.h;  cvs diff -u -r 1.1.2.85 -r 1.1.2.86 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.2.2.86 -r 1.2.2.87 src/vcalendar.c;  ) > 2.0.4cvs3.patchset
 ( cvs diff -u -r 1.1.2.86 -r 1.1.2.87 src/vcal_meeting_gtk.c;  ) > 2.0.4cvs4.patchset
+( cvs diff -u -r 1.1.2.80 -r 1.1.2.81 src/vcal_manager.c;  cvs diff -u -r 1.2.2.87 -r 1.2.2.88 src/vcalendar.c;  ) > 2.0.4cvs5.patchset
